--- a/package.json
+++ b/package.json
@@ -2,20 +2,28 @@
   "name": "review",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://blendibox.github.io/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "eject": "next eject",
+    "predeploy": "next build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "next": "12.2.5",
+    "node-html-parser": "^5.4.2-0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "18.2.0",
+    "react-tooltip": "^4.2.21"
   },
   "devDependencies": {
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "gh-pages": "^3.2.3",
     "tailwindcss": "^3.1.8"
   }
 }
