--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint",
     "eject": "next eject",
     "predeploy": "next build",
-    "deploy": "gh-pages -d pages"
+    "deploy": "gh-pages -b main -d pages"
   },
   "dependencies": {
     "next": "12.2.5",
