--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "review",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://blendibox.github.io/reviews/", 
+  "homepage": "https://blendibox.github.io/reviews/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export":"next export",
+    "export": "next export",
     "lint": "next lint",
     "eject": "next eject",
     "predeploy": "next build",
     "deploy": "gh-pages -b main -d pages"
   },
   "dependencies": {
-    "next": "12.2.5",
+    "next": "^12.2.6-canary.13",
     "node-html-parser": "^5.4.2-0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
